<resources>
    <string name="app_name">Food Menu</string>
    <string name="themmonan">THÊM MÓN ĂN</string>
    <string name="chuphinh">Chụp hình</string>
    <string name="chonhinh">Chọn hình</string>
    <string name="tenmonan">Tên Món Ăn:</string>
    <string name="nhap_tenmonan">Nhập Tên món ăn</string>
    <string name="giatien">Giá Tiền: </string>
    <string name="nhap_giatien">Nhập Giá tiền</string>
    <string name="loaimonan">Loại Món Ăn: </string>
    <string name="btn_them">Thêm</string>
    <string name="txt_ten">Cơm chiên</string>
    <string name="txt_gia">100,000 đ</string>
    <string name="btn_giam">-</string>
    <string name="txt_soluong">1</string>
    <string name="btn_tang">+</string>
    <string name="btn_thoat">Thoát</string>
    <string name="txt_tongtien">Tổng Cộng :</string>
    <string name="txt_tien">150,000 đ</string>
    <string name="btn_chon">Chọn món</string>
    <string name="txt_tieude">Thực đơn</string>
    <string name="ibtn_home">Trang Chủ</string>
    <string name="ibtn_monan">Thực Đơn</string>
    <string name="ibtn_datmon">Danh Sách Món Gọi</string>
    <string name="ibtn_quanly">Quản Lý Món Ăn</string>
    <string name="txt_loaimon"> Loại món</string>
    <string name="txt_monan"> Món Ăn</string>
    <string name="capnhatmonan">CẬP NHẬT MÓN ĂN</string>
    <string name="capnhat">Cập nhật</string>
    <string name="tenloai">Tên Loại Món Ăn</string>
    <string name="txt_mota">Ngon - Bổ - Rẻ</string>
    <string name="ten_dang_nhap">Tên đăng nhập</string>
    <string name="matkhau">Mật Khẩu</string>
    <string name="tendangnhap">Vui lòng nhập tên đăng nhập</string>
    <string name="dangnhap">Đăng Nhập</string>
    <string name="dongy">Đồng Ý</string>
    <string name="dangky">Đăng Ký</string>
    <string name="nhapmatkhau">Vui lòng nhập mật khẩu bạn ơi</string>
    <string name="ngaysinh">Ngày Sinh</string>
    <string name="chungminhnhandan">Chứng Minh Nhân Dân</string>
    <string name="thoat">Thoát</string>
    <string name="hoten">Họ Tên</string>
    <string name="xemgiohang">Xem Giỏ Hàng</string>
    <string name="row1Name">Ali</string>
    <string name="row1Age">51</string>
    <string name="row1Surname">Mohammad</string>
    <string name="row2Name">Dave</string>
    <string name="row2Age">45</string>
    <string name="row2Surname">Smith</string>
    <string name="row3Name">Jason</string>
    <string name="row3Age">67</string>
    <string name="row3Surname">William</string>

</resources>